--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <% if(isProd){ %>
     <script src="https://unpkg.com/react@16.12.0/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.production.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/react-admin@3.2.2/lib/index.min.js"></script>
     <% } %>
     <script src="./javascript/main.js"></script>
   </head>
